Colaboratory를 통해 생성됨

--- a/실습1강_동역학.ipynb
+++ b/실습1강_동역학.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNn1ONggFWVsWqEGtCEN5A2",
+      "authorship_tag": "ABX9TyNv5K7HECy1ZTmt/BpNkKtW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -732,7 +732,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Diffrences : automatic differentiation but for discrete numeric points backpropagation"
+        "###Diffrences : automatic differentiation but for discrete numeric points (backpropagation)"
       ],
       "metadata": {
         "id": "_7Om90qSvVG9"
@@ -740,12 +740,127 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "with tf.GradientTape(persistent=True) as tape:\n",
+        "    t_tf = tf.constant(t_val)\n",
+        "    tape.watch(t_tf)\n",
+        "    p_val = position(t_tf)\n",
+        "    v_val = tape.gradient(p_val, t_tf)\n",
+        "a_val = tape.gradient(v_val, t_tf)"
+      ],
       "metadata": {
-        "id": "KRUfOXt_uyjv"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KRUfOXt_uyjv",
+        "outputId": "b31b17e3-25b7-4fb9-894d-ba097b843a70"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:tensorflow:Calling GradientTape.gradient on a persistent tape inside its context is significantly less efficient than calling it outside the context (it causes the gradient ops to be recorded on the tape, leading to increased CPU and memory usage). Only call GradientTape.gradient inside the context if you actually want to trace the gradient in order to compute higher order derivatives.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t_val"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4twryMKCw09d",
+        "outputId": "467acd50-154d-4042-d42e-595eb29ae6e4"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.        , 0.06060606, 0.12121212, 0.18181818, 0.24242424,\n",
+              "       0.3030303 , 0.36363636, 0.42424242, 0.48484848, 0.54545455,\n",
+              "       0.60606061, 0.66666667, 0.72727273, 0.78787879, 0.84848485,\n",
+              "       0.90909091, 0.96969697, 1.03030303, 1.09090909, 1.15151515,\n",
+              "       1.21212121, 1.27272727, 1.33333333, 1.39393939, 1.45454545,\n",
+              "       1.51515152, 1.57575758, 1.63636364, 1.6969697 , 1.75757576,\n",
+              "       1.81818182, 1.87878788, 1.93939394, 2.        , 2.06060606,\n",
+              "       2.12121212, 2.18181818, 2.24242424, 2.3030303 , 2.36363636,\n",
+              "       2.42424242, 2.48484848, 2.54545455, 2.60606061, 2.66666667,\n",
+              "       2.72727273, 2.78787879, 2.84848485, 2.90909091, 2.96969697,\n",
+              "       3.03030303, 3.09090909, 3.15151515, 3.21212121, 3.27272727,\n",
+              "       3.33333333, 3.39393939, 3.45454545, 3.51515152, 3.57575758,\n",
+              "       3.63636364, 3.6969697 , 3.75757576, 3.81818182, 3.87878788,\n",
+              "       3.93939394, 4.        , 4.06060606, 4.12121212, 4.18181818,\n",
+              "       4.24242424, 4.3030303 , 4.36363636, 4.42424242, 4.48484848,\n",
+              "       4.54545455, 4.60606061, 4.66666667, 4.72727273, 4.78787879,\n",
+              "       4.84848485, 4.90909091, 4.96969697, 5.03030303, 5.09090909,\n",
+              "       5.15151515, 5.21212121, 5.27272727, 5.33333333, 5.39393939,\n",
+              "       5.45454545, 5.51515152, 5.57575758, 5.63636364, 5.6969697 ,\n",
+              "       5.75757576, 5.81818182, 5.87878788, 5.93939394, 6.        ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 92
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "v_val"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mCeso03Kw3cK",
+        "outputId": "8e3cabf4-0600-4417-8afd-142ae3a963b1"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(100,), dtype=float64, numpy=\n",
+              "array([  0.        ,   0.71625344,   1.41046832,   2.08264463,\n",
+              "         2.73278237,   3.36088154,   3.96694215,   4.55096419,\n",
+              "         5.11294766,   5.65289256,   6.1707989 ,   6.66666667,\n",
+              "         7.14049587,   7.5922865 ,   8.02203857,   8.42975207,\n",
+              "         8.815427  ,   9.17906336,   9.52066116,   9.84022039,\n",
+              "        10.13774105,  10.41322314,  10.66666667,  10.89807163,\n",
+              "        11.10743802,  11.29476584,  11.4600551 ,  11.60330579,\n",
+              "        11.72451791,  11.82369146,  11.90082645,  11.95592287,\n",
+              "        11.98898072,  12.        ,  11.98898072,  11.95592287,\n",
+              "        11.90082645,  11.82369146,  11.72451791,  11.60330579,\n",
+              "        11.4600551 ,  11.29476584,  11.10743802,  10.89807163,\n",
+              "        10.66666667,  10.41322314,  10.13774105,   9.84022039,\n",
+              "         9.52066116,   9.17906336,   8.815427  ,   8.42975207,\n",
+              "         8.02203857,   7.5922865 ,   7.14049587,   6.66666667,\n",
+              "         6.1707989 ,   5.65289256,   5.11294766,   4.55096419,\n",
+              "         3.96694215,   3.36088154,   2.73278237,   2.08264463,\n",
+              "         1.41046832,   0.71625344,   0.        ,  -0.73829201,\n",
+              "        -1.49862259,  -2.28099174,  -3.08539945,  -3.91184573,\n",
+              "        -4.76033058,  -5.63085399,  -6.52341598,  -7.43801653,\n",
+              "        -8.37465565,  -9.33333333, -10.31404959, -11.31680441,\n",
+              "       -12.3415978 , -13.38842975, -14.45730028, -15.54820937,\n",
+              "       -16.66115702, -17.79614325, -18.95316804, -20.1322314 ,\n",
+              "       -21.33333333, -22.55647383, -23.80165289, -25.06887052,\n",
+              "       -26.35812672, -27.66942149, -29.00275482, -30.35812672,\n",
+              "       -31.73553719, -33.13498623, -34.55647383, -36.        ])>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 93
+        }
+      ]
     }
   ]
 }
